@@ -1,3 +1,3 @@
 # This file is generated. Do not edit!
 package App::Music::ChordPro::Version;
-our $VERSION = "0.930_012";
+our $VERSION = "0.930_013";
